made customer pages

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,7 +6,7 @@
   "Statistika": "Статистика",
   "Sozlamalar": "Настройки",
   "Qo'llab quvvatlash": "Поддержка",
-  "Asosiy panel": "Основная панель",
+  "Asosiy panel": "Основной",
   "Chiqish": "Выйти",
   "Qidirish": "Найти",
   "Menu": "Меню",
