language added to customer

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,9 +16,26 @@
   "O’tgan yil": "Прошлый год",
   "Hozirgi yil": "Этот год",
   "Oyni tanlash": "Выбрать месяц",
-  "s": "",
-  "d": "",
-  "f": "",
-  "g": "",
-  "t": ""
+  "Buyurtmalar": "Заказы",
+  "Kunlik bonus": "Дневной бонус",
+  "Bonus": "Бонус",
+  "Keshbek": "Кешбек",
+  "Izdoshlar soni": "Количество последователей",
+  "Daromad grafigi": "График дохода",
+  "Mahsulot grafigi": "График товаров",
+  "Batafsil":"Подробнее",
+  "Ishlab chiqaruvchi":"Производитель",
+  "Soni":"Количество",
+  "Umumiy summa":"Общая сумма",
+  "Buyurtma berish":"Заказать",
+  "Hisob raqamidagi summa":"Сумма на счету",
+  "Progressdagi pul":"Деньги в прогрессе",
+  "Pul kiritish":"Ввод денег",
+  "Pul yechish":"Снятие денег",
+  "F.I.SH":"Ф.И.О.",
+  "Yechilgan summa":"Выведенные деньги",
+  "Sana":"Дата",
+  "Holati":"Статус",
+  "Obunalar":"Подписки",
+  "oyiga":"месяц"
 }
