--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,19 +23,92 @@
   "Izdoshlar soni": "Количество последователей",
   "Daromad grafigi": "График дохода",
   "Mahsulot grafigi": "График товаров",
-  "Batafsil":"Подробнее",
-  "Ishlab chiqaruvchi":"Производитель",
-  "Soni":"Количество",
-  "Umumiy summa":"Общая сумма",
-  "Buyurtma berish":"Заказать",
-  "Hisob raqamidagi summa":"Сумма на счету",
-  "Progressdagi pul":"Деньги в прогрессе",
-  "Pul kiritish":"Ввод денег",
-  "Pul yechish":"Снятие денег",
-  "F.I.SH":"Ф.И.О.",
-  "Yechilgan summa":"Выведенные деньги",
-  "Sana":"Дата",
-  "Holati":"Статус",
-  "Obunalar":"Подписки",
-  "oyiga":"месяц"
+  "Batafsil": "Подробнее",
+  "Ishlab chiqaruvchi": "Производитель",
+  "Soni": "Количество",
+  "Umumiy summa": "Общая сумма",
+  "Buyurtma berish": "Заказать",
+  "Hisob raqamidagi summa": "Сумма на счету",
+  "Progressdagi pul": "Деньги в прогрессе",
+  "Pul kiritish": "Ввод денег",
+  "Pul yechish": "Снятие денег",
+  "F.I.SH": "Ф.И.О.",
+  "Yechilgan summa": "Выведенные деньги",
+  "Sana": "Дата",
+  "Holati": "Статус",
+  "Obunalar": "Подписки",
+  "oyiga": "месяц",
+  "Akkauntingizga kiring": "Войдите в существующий аккаунт",
+  "Xush kelibsiz": "Добро пожаловать",
+  "Akkauntingiz mavjud emasmi": "Нет аккаунта",
+  "Bu yerga bosing": " Нажмите сюда",
+  "Login": "Логин",
+  "Parol": "Пароль",
+  "Kirish": "Войти",
+  "Akkaunt yarating": "Создайте аккаунт",
+  "Akkauntingiz mavjudmi": "Есть аккаунт",
+  "Telefon raqam": "Номер телефона",
+  "Yuborish": "Отправить",
+  "kodni qayta yuborish": "отправить код снова",
+  "Taklif id": "ID приглашения",
+  "Passport seria": "Серия пасспорта",
+  "Parolni tasdiqlang": "Подтвердите пароль",
+  "Familiya": "Фамилия",
+  "Ism": "Имя",
+  "Umumiy savdo":"Общая торговля",
+  "Mijozlar soni":"Количество клиентов",
+  "Ishlagan kunlari":"Рабочие дни",
+  "Mahsulotlar soni":"Количество продуктов",
+  "Umumiy statistika":"Общая статистика",
+  "Mijozlar grafigi":"График клиентов",
+  "Mahsulot sotuv ulushi":"Доля продаж продукта",
+  "Obunalar grafigi":"График подписок",
+  "dona":"штук",
+  "Mahsulotlar qoldigi":"Остаток продуктов",
+  "kun":"дней",
+  "Filiallar savdo ulushi":"Доля продаж филиалов",
+  "Fililallar savdo aylanmalari":"Оборот продаж филиалов",
+  "Xodimlar":"Сотрудники",
+  "to'liq":"Подробнее",
+  "Mahsulot tarqatish":"Отправка продуктов",
+  "Tarix":"История",
+  "Tarixni ko'rish":"Посмотреть историю",
+  "Mahsulot yuborish":"Доставка товара",
+  "savdo aylanmalari":"оборот продаж",
+  "Savdo":"Продажа",
+  "Umumiy daromad":"Общая прибыль",
+  "sotuvchi":"продавец",
+  "Xodim":"Сотрудник",
+  "Ish boshlagan sanasi":"Дата начала работы",
+  "Mahsulotlar savdo ulushi":"Доля торговли товаров",
+  "Mahsulot qo'shish":"Добавление товара",
+  "Mahsulotlar ro'yxati":"Список товаров",
+  "Nomi":"Название",
+  "Narxi":"Цена",
+  "Kategoriya":"Категория",
+  "Xolati":"Статус",
+  "Taxrirlash":"Редактировать",
+  "Mahsulot sotuvi":"Продажа товаров",
+  "Mahsulot":"Товар",
+  "Miqdori":"Количество",
+  "Filial":"Филиал",
+  "Debet":"Дебет",
+  "Kirim":"Поступление",
+  "Chiqim":"Расход",
+  "Mijoz":"Клиент",
+  "Umumiy obuna summasi":"Общая сумма подписки",
+  "Foydalanuvchilar":"Пользователи",
+  "Tarif yaratish":"Создание тарифа",
+  "obuna nomlari":"название тарифа",
+  "ulanish summasi":"цена подключения",
+  "Oylik bonus":"Ежемесячный бонус",
+  "Obuna turi":"Тип подписки",
+  "Keyingi obuna to’lovi kuni":"Следующий день оплаты подписки",
+  "Karta raqami":"Номер карты",
+  "Tug'ilgan sana":"Дата рождения",
+  "Karta amal qlish muddati":"Срок дейстия карты",
+  "Shajara":"Древо",
+  "Avlod":"Поколение",
+  "Status":"Статус",
+  "Izdoshlar":"Последователи"
 }
