customers pages addited

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -110,5 +110,7 @@
   "Shajara":"Древо",
   "Avlod":"Поколение",
   "Status":"Статус",
-  "Izdoshlar":"Последователи"
+  "Izdoshlar":"Последователи",
+  "Keyingi bonus":"Следующий бонус",
+  "Summa":"Сумма"
 }
