orders api corrected

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -112,5 +112,7 @@
   "Status":"Статус",
   "Izdoshlar":"Последователи",
   "Keyingi bonus":"Следующий бонус",
-  "Summa":"Сумма"
+  "Summa":"Сумма",
+  "Umumiy buyurtmalar":"Все заказы",
+  "Aktiv buyurtmalar":"Активные заказы"
 }
