--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -114,5 +114,7 @@
   "Keyingi bonus":"Следующий бонус",
   "Summa":"Сумма",
   "Umumiy buyurtmalar":"Все заказы",
-  "Aktiv buyurtmalar":"Активные заказы"
+  "Aktiv buyurtmalar":"Активные заказы",
+  "Obuna Summasi":"Сумма подписки",
+  "Parol o'zgartirish":"Изменить пароль"
 }
