--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -116,5 +116,7 @@
   "Umumiy buyurtmalar":"Все заказы",
   "Aktiv buyurtmalar":"Активные заказы",
   "Obuna Summasi":"Сумма подписки",
-  "Parol o'zgartirish":"Изменить пароль"
+  "Parol o'zgartirish":"Изменить пароль",
+  "Sotuv grafigi":"График продаж",
+  "Xabarlar":"Уведомления"
 }
