added money send

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -148,5 +148,7 @@
   "Moliyaviy malumotlar":"Финансовая информация",
   "Komentariy":"Комментарий",
   "Mahsulot qaytib olish":"Вернуть товар",
-  "Xodim qo'shish":"Добавить сотрудника"
+  "Xodim qo'shish":"Добавить сотрудника",
+  "To'lash":"Платить",
+  "O'tkazma":"Перевод"
 }
