admin-notifications added

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -150,5 +150,8 @@
   "Mahsulot qaytib olish":"Вернуть товар",
   "Xodim qo'shish":"Добавить сотрудника",
   "To'lash":"Платить",
-  "O'tkazma":"Перевод"
+  "O'tkazma":"Перевод",
+  "Karta ulangan telefon raqam":"Подключенный к карте номер",
+  "Xabar qo'shish":"Добавление уведомления",
+  "Xabar":"Сообщение"
 }
