--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -153,5 +153,6 @@
   "O'tkazma":"Перевод",
   "Karta ulangan telefon raqam":"Подключенный к карте номер",
   "Xabar qo'shish":"Добавление уведомления",
-  "Xabar":"Сообщение"
+  "Xabar":"Сообщение",
+  "Rasmni o'zgartirish":"Изменить фото"
 }
