--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -154,5 +154,6 @@
   "Karta ulangan telefon raqam":"Подключенный к карте номер",
   "Xabar qo'shish":"Добавление уведомления",
   "Xabar":"Сообщение",
-  "Rasmni o'zgartirish":"Изменить фото"
+  "Rasmni o'zgartirish":"Изменить фото",
+  "Komissiya":"Комиссия"
 }
